--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="/src/index.css">
     <title>React App</title>
-    
   </head>
   <body>
     <div id="root"></div>
