reconfigured home component

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <title>React App</title>
   </head>
   <body>
+    <section id="home">
+      <img className="banner" src='https://i.postimg.cc/T1g511kC/banner.png' alt="banner" />
+  </section>
     <div id="root"></div>
 
   </body>
