--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/src/index.css">
-    <title>React App</title>
+    <title>My Sheet Music</title>
   </head>
   <body>
     <section id="home">
